next-lesson-18-init-3

--- a/lesson-17.html
+++ b/lesson-17.html
@@ -32,16 +32,59 @@
 <h1>Задание 5 (Линейный алгоритм)</h1>
 <h3>Вариант 9</h3>
 <p><img alt="pic" src="./images/evich2021-V09-Z04_task.png"></p>
-<h2>Вычислитель. Схема решения</h2>
-<p><img alt="pic" src="./images/evich2021-repeat-Z05.png"></p>
+<table>
+<thead>
+<tr>
+<th>Схема решения</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><em>Выполнить программу</em></td>
+</tr>
+<tr>
+<td><em>Получить уравнение</em></td>
+</tr>
+<tr>
+<td><em>Решить уравнение</em></td>
+</tr>
+<tr>
+<td><img alt="pic" src="./images/evich2021-repeat-Z05.png"></td>
+</tr>
+</tbody>
+</table>
 <h2>Задания повышенной сложности</h2>
 <h3>Вариант 19</h3>
 <p><img alt="pic" src="./images/evich2021-V19-Z05_task.png"></p>
 <h3>Вариант 20</h3>
 <p><img alt="pic" src="./images/evich2021-V20-Z05_task.png"></p>
 <h1>Задание 4 (Симметричная таблица)</h1>
-<h2>Таблица дорог. Схема решения</h2>
-<p><img alt="pic" src="./images/evich2021-repeat-Z04.png"></p>
+<h3>Вариант 1</h3>
+<p><img alt="pic" src="./images/evich2021-V01-Z04_task.png"></p>
+<table>
+<thead>
+<tr>
+<th>Схема решения</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><em>Обозначить населённые пункты</em></td>
+</tr>
+<tr>
+<td><em>Провести между ними дороги</em></td>
+</tr>
+<tr>
+<td><em>Подписать протяжённость дорог</em></td>
+</tr>
+<tr>
+<td><em>По схеме найти кратчайший путь</em></td>
+</tr>
+<tr>
+<td><img alt="pic" src="./images/evich2021-repeat-Z04.png"></td>
+</tr>
+</tbody>
+</table>
 <h2>Вариант 13 (Домашнее задание)</h2>
 <p><img alt="pic" src="./images/evich2021-V13-Z04_task.png"></p>
 <h3>Скорректированная оценка уровня подготовки</h3>
