next-lesson-18-init-4

--- a/lesson-06.html
+++ b/lesson-06.html
@@ -4,7 +4,7 @@
   <title>Урок 6 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак""><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 6 (Условный оператор) + "Лайфхак""><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
