--- a/index3.html
+++ b/index3.html
@@ -22,19 +22,19 @@
 </div>    <div id="main">
 <h2><a href="./lesson-08.html">Урок 8</a></h2>
 <h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
-Разбор задания 6 (Бесконечный цикл) из вариантов 17-19
+Разбор задания 6 (Бесконечный цикл)
 <h2><a href="./lesson-07.html">Урок 7</a></h2>
 <h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
-Разбор задания 6 (Конечный цикл) из вариантов 13-15
+Разбор задания 6 (Конечный цикл)
 <h2><a href="./lesson-06.html">Урок 6</a></h2>
 <h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
-Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак"
+Разбор задания 6 (Условный оператор) + "Лайфхак"
 <h2><a href="./lesson-05.html">Урок 5</a></h2>
 <h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
-Разбор задания 7 (Интернет-адрес) из вариантов 1-3; + Контрольная работа
+Разбор задания 7 (Интернет-адрес) + Контрольная работа
 <h2><a href="./lesson-04.html">Урок 4</a></h2>
 <h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
-Разбор задания 8 (Поисковый запрос) из вариантов 1-3
+Разбор задания 8 (Поисковый запрос)
 <div class="pagination">
         <a href="./index2.html">&larr;Prev</a>
     page 3 of 5.
