--- a/lesson-08.html
+++ b/lesson-08.html
@@ -4,7 +4,7 @@
   <title>Урок 8 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор задания 6 (Бесконечный цикл) из вариантов 17-19"><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 6 (Бесконечный цикл)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
