--- a/lesson-17.html
+++ b/lesson-17.html
@@ -4,7 +4,7 @@
   <title>Урок 17 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Повторение: Задания 5(Вычислитель) и 4(Расстояние)"><meta name="author" content="andygram">-->
+<meta name="description" content="Повторение: Задания 5 (Вычислитель) и 4 (Расстояние)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -85,7 +85,7 @@
 </tr>
 </tbody>
 </table>
-<h2>Вариант 13 (Домашнее задание)</h2>
+<h2>Задания повышенной сложности</h2>
 <p><img alt="pic" src="./images/evich2021-V13-Z04_task.png"></p>
 <h3>Скорректированная оценка уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
