--- a/lesson-18.html
+++ b/lesson-18.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-18.html">Урок 18</a></h2>
-<h5><i class="icon-feather"></i> 14.02.2023, Вт
+<h5><i class="icon-feather"></i> 17.02.2023, Пт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
