Python and databases

--- a/index3.html
+++ b/index3.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-10.html">Урок 10</a></h2>
+<h5><i class="icon-feather"></i> 29.11.2022, Вт </h5>
+Разбор задания 3 (Истинность высказывания)
 <h2><a href="./lesson-09.html">Урок 9</a></h2>
 <h5><i class="icon-feather"></i> 22.11.2022, Вт </h5>
 Разбор задания 4 (Кратчайшее расстояние)
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-06.html">Урок 6</a></h2>
 <h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
 Разбор задания 6 (Условный оператор) + "Лайфхак"
-<h2><a href="./lesson-05.html">Урок 5</a></h2>
-<h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
-Разбор задания 7 (Интернет-адрес) + Контрольная работа
 <div class="pagination">
         <a href="./index2.html">&larr;Prev</a>
     page 3 of 5.
