--- a/index4.html
+++ b/index4.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-05.html">Урок 5</a></h2>
+<h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
+Разбор задания 7 (Интернет-адрес) + Контрольная работа
 <h2><a href="./lesson-04.html">Урок 4</a></h2>
 <h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
 Разбор задания 8 (Поисковый запрос)
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста)
-<h2><a href="./mempython.html">Питончик</a></h2>
-<h5><i class="icon-feather"></i> 17.09.2022, Сб </h5>
-Шпаргалка по языку Python
 <div class="pagination">
         <a href="./index3.html">&larr;Prev</a>
     page 4 of 5.
