--- a/categories.html
+++ b/categories.html
@@ -23,6 +23,7 @@
     <h1>Categories on ОГЭ 2023 информатика</h1>
     <ul>
         <li><a href="./category/oge.html">ОГЭ</a> (24)</li>
+        <li><a href="./category/python.html">python</a> (1)</li>
     </ul>
     </div>
 </div>
