--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-18.html">Урок 18</a></h2>
-<h5><i class="icon-feather"></i> 17.02.2023, Пт </h5>
+<h5><i class="icon-feather"></i> 19.02.2023, Вс </h5>
 Повторение: Задание 6 (Анализ программного кода)
+<h2><a href="./lesson-19.html">Python and databases</a></h2>
+<h5><i class="icon-feather"></i> 17.02.2023, Пт </h5>
+Python and databases
 <h2><a href="./polyakov.html">Презентация</a></h2>
 <h5><i class="icon-feather"></i> 14.02.2023, Вт </h5>
 Презентация по материалам К.Ю.Полякова
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-16.html">Урок 16</a></h2>
 <h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
 Повторение: Логические выражения
-<h2><a href="./lesson-15.html">Урок 15</a></h2>
-<h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
-Стратегия сдачи ОГЭ на 13 баллов из 19
 <div class="pagination">
     page 1 of 5.
         <a href="./index2.html">Next&rarr;</a>
