--- a/polyakov.html
+++ b/polyakov.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Презентация по материалам К.Ю.Полякова | ОГЭ 2023 информатика</title>
+  <title>Презентация | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
 <meta name="description" content="Презентация по материалам К.Ю.Полякова"><meta name="author" content="andygram">-->
@@ -20,7 +20,7 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./polyakov.html">Презентация по материалам К.Ю.Полякова</a></h2>
+<h2><a href="./polyakov.html">Презентация</a></h2>
 <h5><i class="icon-feather"></i> 14.02.2023, Вт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
