Python and databases 1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <h2><a href="./lesson-18.html">Урок 18</a></h2>
 <h5><i class="icon-feather"></i> 19.02.2023, Вс </h5>
 Повторение: Задание 6 (Анализ программного кода)
-<h2><a href="./lesson-19.html">Python and databases</a></h2>
+<h2><a href="./lesson_18.html">Уpок 18</a></h2>
 <h5><i class="icon-feather"></i> 17.02.2023, Пт </h5>
 Python and databases
 <h2><a href="./polyakov.html">Презентация</a></h2>
