--- a/lesson_18.html
+++ b/lesson_18.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Python and databases | ОГЭ 2023 информатика</title>
+  <title>Уpок 18 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
 <meta name="description" content="Python and databases"><meta name="author" content="andygram">-->
@@ -20,7 +20,7 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-19.html">Python and databases</a></h2>
+<h2><a href="./lesson_18.html">Уpок 18</a></h2>
 <h5><i class="icon-feather"></i> 17.02.2023, Пт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
