next-lesson-19-init-0

--- a/lesson-19.html
+++ b/lesson-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Урок 18 | ОГЭ 2023 информатика</title>
+  <title>Урок 19 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
 <meta name="description" content="Повторение: Задание 6 (Анализ программного кода)"><meta name="author" content="andygram">-->
@@ -20,8 +20,8 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-18.html">Урок 18</a></h2>
-<h5><i class="icon-feather"></i> 21.02.2023, Вт
+<h2><a href="./lesson-19.html">Урок 19</a></h2>
+<h5><i class="icon-feather"></i> 28.02.2023, Вт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
@@ -67,9 +67,10 @@
 </tr>
 </tbody>
 </table>
-<p><img alt="pic" src="./images/python-range-2-arg.png">
-<img alt="pic" src="./images/python-range-3-arg.png">
-<img alt="pic" src="./images/python-range-1-arg.png"></p>
+<p><img alt="pic" src="./images/python-while-in-russian-01.png"></p>
+<h2>"while" в переводе с анлийского - "пока"</h2>
+<p><em>Пока выполняется условие, производить перечисленные действия</em>
+<img alt="pic" src="./images/python-while-in-russian-02.png"></p>
 <h3>Скорректированная оценка уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 
