next-lesson-19-init-1

--- a/lesson-18.html
+++ b/lesson-18.html
@@ -67,6 +67,21 @@
 </tr>
 </tbody>
 </table>
+<h2>"for...in" в переводе с анлийского - "для каждого...из"</h2>
+<p><em>Для каждого значения из списка производить перечисленные действия</em>
+Например,</p>
+<pre><code>
+for i in 1,5,2,4:
+    x = i * i
+    print(x)
+</code></pre>
+<p>Можно вместо прямого перечисления элементов списка использовать</p>
+<pre><code>
+for i in range(1,15,2):
+    x = i * i
+    print(x)
+</code></pre>
+
 <p><img alt="pic" src="./images/python-range-2-arg.png">
 <img alt="pic" src="./images/python-range-3-arg.png">
 <img alt="pic" src="./images/python-range-1-arg.png"></p>
