--- a/lesson-19.html
+++ b/lesson-19.html
@@ -67,9 +67,9 @@
 </tr>
 </tbody>
 </table>
-<p><img alt="pic" src="./images/python-while-in-russian-1.png"></p>
 <h2>"while" в переводе с анлийского - "пока"</h2>
 <p><em>Пока выполняется условие, производить перечисленные действия</em>
+<img alt="pic" src="./images/python-while-in-russian-1.png">
 <img alt="pic" src="./images/python-while-in-russian-2.png"></p>
 <h3>Скорректированная оценка уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
