--- a/lesson-18.html
+++ b/lesson-18.html
@@ -27,9 +27,29 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<h1>Задание 6 (Анализ программного кода)</h1>
+<h2>Конечный цикл (<strong>for ...</strong>) Повторение</h2>
+<h3>"for...in..." в переводе с анлийского - "для каждого...из..."</h3>
+<p><em>Для каждого значения из списка производить перечисленные действия</em></p>
+<p>Например:</p>
+<pre><code>
+for i in 1,5,2,4:
+    x = i * i
+    print(x)
+</code></pre>
+<p>Вместо прямого перечисления элементов списка используют:</p>
+<pre><code>
+for i in range(1,15,2):
+    x = i * i
+    print(x)
+</code></pre>
+
+<h2>range (диапазон)</h2>
+<p><img alt="pic" src="./images/python-range-2-arg.png">
+<img alt="pic" src="./images/python-range-3-arg.png">
+<img alt="pic" src="./images/python-range-1-arg.png"></p>
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
-<h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Три разновидности программного кода в задачах ОГЭ</h2>
 <table>
 <thead>
@@ -67,26 +87,10 @@
 </tr>
 </tbody>
 </table>
-<h2>"for...in" в переводе с анлийского - "для каждого...из"</h2>
-<p><em>Для каждого значения из списка производить перечисленные действия</em>
-Например,</p>
-<pre><code>
-for i in 1,5,2,4:
-    x = i * i
-    print(x)
-</code></pre>
-<p>Можно вместо прямого перечисления элементов списка использовать</p>
-<pre><code>
-for i in range(1,15,2):
-    x = i * i
-    print(x)
-</code></pre>
-
-<p><img alt="pic" src="./images/python-range-2-arg.png">
-<img alt="pic" src="./images/python-range-3-arg.png">
-<img alt="pic" src="./images/python-range-1-arg.png"></p>
-<h3>Скорректированная оценка уровня подготовки</h3>
-<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
+<!--
+### Скорректированная оценка уровня подготовки
+![pic](./images/oge-inf-curr-level-4.png)
+-->
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
