--- a/lesson-19.html
+++ b/lesson-19.html
@@ -27,9 +27,29 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<h1>Задание 6 (Анализ программного кода)</h1>
+<h2>Бесконечный цикл (<strong>while ...</strong>)</h2>
+<h3>"while" в переводе с анлийского - "пока"</h3>
+<p><em>Пока выполняется условие, производить перечисленные действия</em></p>
+<p>Например:</p>
+<pre><code>
+i = 1
+while i < 6:
+    print(i)
+    i += 1
+</code></pre>
+
+<p>Вывод:</p>
+<pre><code>1
+2
+3
+4
+5</code></pre>
+
+<h2>while (пока)</h2>
+<p><img alt="pic" src="./images/python-while-in-russian.png"></p>
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
-<h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Три разновидности программного кода в задачах ОГЭ</h2>
 <table>
 <thead>
@@ -67,12 +87,10 @@
 </tr>
 </tbody>
 </table>
-<h2>"while" в переводе с анлийского - "пока"</h2>
-<p><em>Пока выполняется условие, производить перечисленные действия</em>
-<img alt="pic" src="./images/python-while-in-russian-1.png">
-<img alt="pic" src="./images/python-while-in-russian-2.png"></p>
-<h3>Скорректированная оценка уровня подготовки</h3>
-<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
+<!--
+### Скорректированная оценка уровня подготовки
+![pic](./images/oge-inf-curr-level-4.png)
+-->
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
