next-lesson-19-init-3

--- a/lesson-18.html
+++ b/lesson-18.html
@@ -29,6 +29,7 @@
 
 <h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Конечный цикл (<strong>for ...</strong>) Повторение</h2>
+<p><img alt="pic" src="./images/python-in-russian-for.png"></p>
 <h3>"for...in..." в переводе с анлийского - "для каждого...из..."</h3>
 <p><em>Для каждого значения из списка производить перечисленные действия</em></p>
 <p>Например:</p>
@@ -38,13 +39,13 @@ for i in 1,5,2,4:
     print(x)
 </code></pre>
 <p>Вместо прямого перечисления элементов списка используют:</p>
+<h2>range (диапазон)</h2>
 <pre><code>
 for i in range(1,15,2):
     x = i * i
     print(x)
 </code></pre>
 
-<h2>range (диапазон)</h2>
 <p><img alt="pic" src="./images/python-range-2-arg.png">
 <img alt="pic" src="./images/python-range-3-arg.png">
 <img alt="pic" src="./images/python-range-1-arg.png"></p>
@@ -87,10 +88,8 @@ for i in range(1,15,2):
 </tr>
 </tbody>
 </table>
-<!--
-### Скорректированная оценка уровня подготовки
-![pic](./images/oge-inf-curr-level-4.png)
--->
+<h3>Скорректированная оценка уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
