--- a/lesson-19.html
+++ b/lesson-19.html
@@ -28,7 +28,8 @@
 </h5>
 
 <h1>Задание 6 (Анализ программного кода)</h1>
-<h2>Бесконечный цикл (<strong>while ...</strong>)</h2>
+<h2>Бесконечный цикл (<strong>while ...</strong>) Повторение</h2>
+<p><img alt="pic" src="./images/python-in-russian-while.png"></p>
 <h3>"while" в переводе с анлийского - "пока"</h3>
 <p><em>Пока выполняется условие, производить перечисленные действия</em></p>
 <p>Например:</p>
@@ -46,8 +47,6 @@ while i < 6:
 4
 5</code></pre>
 
-<h2>while (пока)</h2>
-<p><img alt="pic" src="./images/python-while-in-russian.png"></p>
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 <h2>Три разновидности программного кода в задачах ОГЭ</h2>
@@ -87,10 +86,8 @@ while i < 6:
 </tr>
 </tbody>
 </table>
-<!--
-### Скорректированная оценка уровня подготовки
-![pic](./images/oge-inf-curr-level-4.png)
--->
+<h3>Скорректированная оценка уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
