--- a/drafts/lesson-19.html
+++ b/drafts/lesson-19.html
@@ -7,49 +7,46 @@
 <meta name="description" content="Повторение: Задание 6 (Анализ программного кода)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
-  <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-  <link href="./" type="application/atom+xml" rel="alternate" title="ОГЭ 2023 информатика ATOM Feed" />
+  <link href="../theme/css/screen.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" href="../favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+  <link href="../" type="application/atom+xml" rel="alternate" title="ОГЭ 2023 информатика ATOM Feed" />
 </head>
 <body>
 <div id="outer-wrapper">
 <div id="header-wrapper">
-  <div class="logo"><a href=".">ОГЭ 2023 информатика</a></div>
+  <div class="logo"><a href="..">ОГЭ 2023 информатика</a></div>
   <div class="small"></div>
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-19.html">Урок 19</a></h2>
+<h2><a href="../drafts/lesson-19.html">Урок 19</a></h2>
 <h5><i class="icon-feather"></i> 28.02.2023, Вт
 <i class="icon-bookmarks"></i>
-<span><a href="./tag/oge.html">oge</a> / </span>
-<span><a href="./tag/lesson.html">lesson</a> / </span>
+<span><a href="../tag/oge.html">oge</a> / </span>
+<span><a href="../tag/lesson.html">lesson</a> / </span>
 </h5>
 
 <h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Бесконечный цикл (<strong>while ...</strong>) Повторение</h2>
-<p><img alt="pic" src="./images/python-in-russian-while.png"></p>
-<h3>"while" в переводе с анлийского - "пока"</h3>
+<h3>"while" в переводе с анлийского -- "пока"</h3>
 <p><em>Пока выполняется условие, производить перечисленные действия</em></p>
-<p>Например:</p>
-<pre><code>
-i = 1
+<p><img alt="pic" src="./images/python-in-russian-while-head-body.png"></p>
+<p>Например, для такого цикла:</p>
+<pre><code>i = 1
 while i < 6:
     print(i)
-    i += 1
-</code></pre>
+    i += 1</code></pre>
 
-<p>Вывод:</p>
+<p>Результат работы будет такой:</p>
 <pre><code>1
 2
 3
 4
 5</code></pre>
 
-<h3>Оценка текущего уровня подготовки</h3>
-<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
-<h2>Три разновидности программного кода в задачах ОГЭ</h2>
+<h1>Три разновидности программного кода в задачах ОГЭ</h1>
+<p><img alt="pic" src="./images/evich2021-task6-3kinds.jpg"></p>
 <table>
 <thead>
 <tr>
@@ -86,20 +83,24 @@ while i < 6:
 </tr>
 </tbody>
 </table>
-<h3>Скорректированная оценка уровня подготовки</h3>
+<h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
+<!--
+### Скорректированная оценка уровня подготовки
+![pic](./images/oge-inf-curr-level-4.png)
+-->
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
-     <li class="footer"><a href="./tag/book.html">book&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/lesson.html">lesson&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/oge.html">oge</a></li>
+     <li class="footer"><a href="../tag/book.html">book&nbsp;&bull;&nbsp;</a></li>
+     <li class="footer"><a href="../tag/lesson.html">lesson&nbsp;&bull;&nbsp;</a></li>
+     <li class="footer"><a href="../tag/oge.html">oge</a></li>
 </ul><ul class="footer">
     <li class="footer">&copy;&nbsp;2022&nbsp;::</li>
-    <li class="footer"><a href=".">ОГЭ 2023 информатика </a>&nbsp;::</li>
+    <li class="footer"><a href="..">ОГЭ 2023 информатика </a>&nbsp;::</li>
 </ul>
 </div></body>
 </html>
