--- a/lesson-18.html
+++ b/lesson-18.html
@@ -28,20 +28,17 @@
 </h5>
 
 <h1>Задание 6 (Анализ программного кода)</h1>
-<h2>Конечный цикл (<strong>for ...</strong>) Повторение</h2>
-<p><img alt="pic" src="./images/python-in-russian-for.png"></p>
-<h3>"for...in..." в переводе с анлийского - "для каждого...из..."</h3>
+<h2>Конечный цикл (<strong>for...in...</strong>) Повторение</h2>
+<h3>"for...in..." в переводе с анлийского -- "для каждого...из..."</h3>
 <p><em>Для каждого значения из списка производить перечисленные действия</em></p>
-<p>Например:</p>
-<pre><code>
-for i in 1,5,2,4:
+<p><img alt="pic" src="./images/python-in-russian-for-head-body.png"></p>
+<p><strong>range</strong> (<em>диапазон</em>) используют вместо перечисления элементов списка:</p>
+<pre><code>for i in range(2,10):
     x = i * i
     print(x)
 </code></pre>
-<p>Вместо прямого перечисления элементов списка используют:</p>
-<h2>range (диапазон)</h2>
-<pre><code>
-for i in range(1,15,2):
+<p>Непосредственное перечисление элементов списка (<em>так тоже можно</em>):</p>
+<pre><code>for i in (2,3,4,5,6,7,8,9):
     x = i * i
     print(x)
 </code></pre>
@@ -49,9 +46,8 @@ for i in range(1,15,2):
 <p><img alt="pic" src="./images/python-range-2-arg.png">
 <img alt="pic" src="./images/python-range-3-arg.png">
 <img alt="pic" src="./images/python-range-1-arg.png"></p>
-<h3>Оценка текущего уровня подготовки</h3>
-<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
-<h2>Три разновидности программного кода в задачах ОГЭ</h2>
+<h1>Три разновидности программного кода в задачах ОГЭ</h1>
+<p><img alt="pic" src="./images/evich2021-task6-3kinds.jpg"></p>
 <table>
 <thead>
 <tr>
@@ -88,8 +84,12 @@ for i in range(1,15,2):
 </tr>
 </tbody>
 </table>
-<h3>Скорректированная оценка уровня подготовки</h3>
+<h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
+<!--
+### Скорректированная оценка уровня подготовки
+![pic](./images/oge-inf-curr-level-4.png)
+-->
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
