--- a/lesson-19.html
+++ b/lesson-19.html
@@ -7,24 +7,24 @@
 <meta name="description" content="Повторение: Задание 6 (Анализ программного кода)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
-  <link href="../theme/css/screen.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="../favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-  <link href="../" type="application/atom+xml" rel="alternate" title="ОГЭ 2023 информатика ATOM Feed" />
+  <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link href="./" type="application/atom+xml" rel="alternate" title="ОГЭ 2023 информатика ATOM Feed" />
 </head>
 <body>
 <div id="outer-wrapper">
 <div id="header-wrapper">
-  <div class="logo"><a href="..">ОГЭ 2023 информатика</a></div>
+  <div class="logo"><a href=".">ОГЭ 2023 информатика</a></div>
   <div class="small"></div>
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="../drafts/lesson-19.html">Урок 19</a></h2>
+<h2><a href="./lesson-19.html">Урок 19</a></h2>
 <h5><i class="icon-feather"></i> 28.02.2023, Вт
 <i class="icon-bookmarks"></i>
-<span><a href="../tag/oge.html">oge</a> / </span>
-<span><a href="../tag/lesson.html">lesson</a> / </span>
+<span><a href="./tag/oge.html">oge</a> / </span>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
 <h1>Задание 6 (Анализ программного кода)</h1>
@@ -95,12 +95,12 @@ while i < 6:
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
-     <li class="footer"><a href="../tag/book.html">book&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="../tag/lesson.html">lesson&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="../tag/oge.html">oge</a></li>
+     <li class="footer"><a href="./tag/book.html">book&nbsp;&bull;&nbsp;</a></li>
+     <li class="footer"><a href="./tag/lesson.html">lesson&nbsp;&bull;&nbsp;</a></li>
+     <li class="footer"><a href="./tag/oge.html">oge</a></li>
 </ul><ul class="footer">
     <li class="footer">&copy;&nbsp;2022&nbsp;::</li>
-    <li class="footer"><a href="..">ОГЭ 2023 информатика </a>&nbsp;::</li>
+    <li class="footer"><a href=".">ОГЭ 2023 информатика </a>&nbsp;::</li>
 </ul>
 </div></body>
 </html>
