python-IDLE-windows-picture-1

--- a/drafts/lesson-20.html
+++ b/drafts/lesson-20.html
@@ -27,6 +27,7 @@
 <span><a href="../tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<p><img alt="pic" src="./images/python-IDLE-windows.png"></p>
 <h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Условный оператор (<strong>if ... else ...</strong>) Повторение</h2>
 <h3>"if" в переводе с анлийского -- "если", "else" -- "иначе"</h3>
