--- a/lesson-19.html
+++ b/lesson-19.html
@@ -27,6 +27,7 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<p><img alt="pic" src="./images/python-IDLE-windows.png"></p>
 <h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Бесконечный цикл (<strong>while ...</strong>) Повторение</h2>
 <h3>"while" в переводе с анлийского -- "пока"</h3>
