--- a/lesson-18.html
+++ b/lesson-18.html
@@ -27,6 +27,7 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<p><img alt="pic" src="./images/python-IDLE-windows-1.png"></p>
 <h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Конечный цикл (<strong>for...in...</strong>) Повторение</h2>
 <h3>"for...in..." в переводе с анлийского -- "для каждого...из..."</h3>
