next-lesson-20-init-0

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-20.html">Урок 20</a></h2>
+<h5><i class="icon-feather"></i> 07.03.2023, Вт </h5>
+Повторение: Задание 6 (Анализ программного кода)
 <h2><a href="./lesson-19.html">Урок 19</a></h2>
 <h5><i class="icon-feather"></i> 28.02.2023, Вт </h5>
 Повторение: Задание 6 (Анализ программного кода)
@@ -32,11 +35,8 @@
 <h2><a href="./lesson-17.html">Урок 17</a></h2>
 <h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
 Повторение: Задания 5 (Вычислитель) и 4 (Расстояние)
-<h2><a href="./lesson-16.html">Урок 16</a></h2>
-<h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
-Повторение: Логические выражения
 <div class="pagination">
-    page 1 of 5.
+    page 1 of 6.
         <a href="./index2.html">Next&rarr;</a>
 </div>    </div>
 </div>
