--- a/index2.html
+++ b/index2.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-16.html">Урок 16</a></h2>
+<h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
+Повторение: Логические выражения
 <h2><a href="./lesson-15.html">Урок 15</a></h2>
 <h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
 Стратегия сдачи ОГЭ на 13 баллов из 19
@@ -32,12 +35,9 @@
 <h2><a href="./lesson-12.html">Урок 12</a></h2>
 <h5><i class="icon-feather"></i> 20.12.2022, Вт </h5>
 Разбор задания 1 (Биты и байты)
-<h2><a href="./lesson-11.html">Урок 11</a></h2>
-<h5><i class="icon-feather"></i> 13.12.2022, Вт </h5>
-Разбор задания 2 (Зашифрованное сообщение)
 <div class="pagination">
         <a href="./index.html">&larr;Prev</a>
-    page 2 of 5.
+    page 2 of 6.
         <a href="./index3.html">Next&rarr;</a>
 </div>    </div>
 </div>
