next-lesson-20-init-0

--- a/lesson-18.html
+++ b/lesson-18.html
@@ -28,7 +28,7 @@
 </h5>
 
 <p><img alt="pic" src="./images/python-IDLE-windows-1.png"></p>
-<h1>Задание 6 (Анализ программного кода)</h1>
+<h1>Задание 6 (Анализ программного кода) for</h1>
 <h2>Конечный цикл (<strong>for...in...</strong>) Повторение</h2>
 <h3>"for...in..." в переводе с анлийского -- "для каждого...из..."</h3>
 <p><em>Для каждого значения из списка производить перечисленные действия</em></p>
