--- a/lesson-19.html
+++ b/lesson-19.html
@@ -28,7 +28,7 @@
 </h5>
 
 <p><img alt="pic" src="./images/python-IDLE-windows-2.png"></p>
-<h1>Задание 6 (Анализ программного кода)</h1>
+<h1>Задание 6 (Анализ программного кода) while</h1>
 <h2>Бесконечный цикл (<strong>while ...</strong>) Повторение</h2>
 <h3>"while" в переводе с анлийского -- "пока"</h3>
 <p><em>Пока выполняется условие, производить перечисленные действия</em></p>
