--- a/lesson-20.html
+++ b/lesson-20.html
@@ -28,7 +28,7 @@
 </h5>
 
 <p><img alt="pic" src="./images/python-IDLE-windows-2.png"></p>
-<h1>Задание 6 (Анализ программного кода)</h1>
+<h1>Задание 6 (Анализ программного кода) if-else</h1>
 <h2>Условный оператор (<strong>if ... else ...</strong>) Повторение</h2>
 <h3>"if" в переводе с анлийского -- "если", "else" -- "иначе"</h3>
 <p><em>Если выполняется условие, произвести перечисленные действия</em></p>
