next-lesson-20-init-1

--- a/lesson-18.html
+++ b/lesson-18.html
@@ -4,7 +4,7 @@
   <title>Урок 18 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Повторение: Задание 6 (Анализ программного кода)"><meta name="author" content="andygram">-->
+<meta name="description" content="Повторение: Задание 6 (Анализ программного кода) for"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -28,7 +28,7 @@
 </h5>
 
 <p><img alt="pic" src="./images/python-IDLE-windows-1.png"></p>
-<h1>Задание 6 (Анализ программного кода) for</h1>
+<h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Конечный цикл (<strong>for...in...</strong>) Повторение</h2>
 <h3>"for...in..." в переводе с анлийского -- "для каждого...из..."</h3>
 <p><em>Для каждого значения из списка производить перечисленные действия</em></p>
