--- a/lesson-20.html
+++ b/lesson-20.html
@@ -4,7 +4,7 @@
   <title>Урок 20 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Повторение: Задание 6 (Анализ программного кода)"><meta name="author" content="andygram">-->
+<meta name="description" content="Повторение: Задание 6 (Анализ программного кода) if-else"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -28,7 +28,7 @@
 </h5>
 
 <p><img alt="pic" src="./images/python-IDLE-windows-2.png"></p>
-<h1>Задание 6 (Анализ программного кода) if-else</h1>
+<h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Условный оператор (<strong>if ... else ...</strong>) Повторение</h2>
 <h3>"if" в переводе с анлийского -- "если", "else" -- "иначе"</h3>
 <p><em>Если выполняется условие, произвести перечисленные действия</em></p>
