next-lesson-20-init-2

--- a/lesson-20.html
+++ b/lesson-20.html
@@ -30,8 +30,9 @@
 <p><img alt="pic" src="./images/python-IDLE-windows-2.png"></p>
 <h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Условный оператор (<strong>if ... else ...</strong>) Повторение</h2>
-<h3>"if" в переводе с анлийского -- "если", "else" -- "иначе"</h3>
-<p><em>Если выполняется условие, произвести перечисленные действия</em></p>
+<p>В переводе с анлийского: "if" -- "если", "else" -- "иначе"</p>
+<h3>Если &lt;условие&gt; <em>истинно</em>, выполнить &lt;блок 1&gt;, &lt;блок 2&gt; -- не выполнять</h3>
+<h3>Если &lt;условие&gt; <em>ложно</em>, пропустить &lt;блок 1&gt;, а выполнить &lt;блок 2&gt;</h3>
 <p><img alt="pic" src="./images/python-in-russian-if-else-body.png"></p>
 <p>Например, для такого кода:</p>
 <pre><code>x = -5
