--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-21.html">Урок 21</a></h2>
+<h5><i class="icon-feather"></i> 14.03.2023, Вт </h5>
+Повторение: Язык программирования Пайтон
 <h2><a href="./lesson-20.html">Урок 20</a></h2>
 <h5><i class="icon-feather"></i> 07.03.2023, Вт </h5>
 Повторение: Задание 6 (Анализ программного кода) if-else
@@ -32,9 +35,6 @@
 <h2><a href="./polyakov.html">Презентация</a></h2>
 <h5><i class="icon-feather"></i> 14.02.2023, Вт </h5>
 Презентация по материалам К.Ю.Полякова
-<h2><a href="./lesson-17.html">Урок 17</a></h2>
-<h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
-Повторение: Задания 5 (Вычислитель) и 4 (Расстояние)
 <div class="pagination">
     page 1 of 6.
         <a href="./index2.html">Next&rarr;</a>
