--- a/index5.html
+++ b/index5.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-02.html">Урок 2</a></h2>
+<h5><i class="icon-feather"></i> 27.09.2022, Вт </h5>
+Разбор задания 10 (Системы счисления)
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста)
@@ -32,9 +35,6 @@
 <h2><a href="./evichbook.html">Книга</a></h2>
 <h5><i class="icon-feather"></i> 15.09.2022, Чт </h5>
 Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
-<h2><a href="./fipi.html">Ф И П И</a></h2>
-<h5><i class="icon-feather"></i> 12.09.2022, Пн </h5>
-Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
 <div class="pagination">
         <a href="./index4.html">&larr;Prev</a>
     page 5 of 6.
