next-lesson-21-init-1

--- a/lesson-21.html
+++ b/lesson-21.html
@@ -28,7 +28,8 @@
 </h5>
 
 <h1>Python (основы языка программирования)</h1>
-<p><img alt="pic" src="./images/3d-python-logo-fine-png.webp"></p>
+<p><img alt="pic" src="./images/mem-python-example.jpg">
+Программа содержит <u>все</u> необходимые для ОГЭ функции и конструкции языка <em>Python</em></p>
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 <!--
