--- a/lesson-21.html
+++ b/lesson-21.html
@@ -27,12 +27,15 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Python (основы языка программирования)</h1>
-<p><img alt="pic" src="./images/mem-python-example.jpg">
-Программа содержит <u>все</u> необходимые для ОГЭ функции и конструкции языка <em>Python</em></p>
+<h1>Python (за 1 час)</h1>
+<iframe width="560" height="315" title="YouTube" src="https://www.youtube.com/embed/fp5-XQFr_nk" frameborder="0" allowfullscreen></iframe>
+
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 <!--
+![pic](./images/mem-python-example.jpg)
+Программа содержит <u>все</u> необходимые для ОГЭ функции и конструкции языка *Python*
+
 ### Скорректированная оценка уровня подготовки
 ![pic](./images/oge-inf-curr-level-4.png)
 -->
