next-lesson-21-init-2a

--- a/lesson-21.html
+++ b/lesson-21.html
@@ -27,8 +27,11 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Python (за 1 час)</h1>
-<iframe width="560" height="315" title="YouTube" src="https://www.youtube.com/embed/fp5-XQFr_nk" frameborder="0" allowfullscreen></iframe>
+<h1>Весь Python за 1 час</h1>
+<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/fp5-XQFr_nk" frameborder="0" allowfullscreen></iframe>
+
+<h1>Весь Python для ОГЭ за 40 минут</h1>
+<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/FwS3St547Nk" frameborder="0" allowfullscreen></iframe>
 
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
