next-lesson-21-init-2b

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <h2><a href="./lesson-21.html">Урок 21</a></h2>
 <h5><i class="icon-feather"></i> 14.03.2023, Вт </h5>
 Повторение: Язык программирования Пайтон
+<h2><a href="./youtube-video.html">Видеоуроки</a></h2>
+<h5><i class="icon-feather"></i> 10.03.2023, Пт </h5>
+Youtube: Короткие видеоуроки по Пайтону
 <h2><a href="./lesson-20.html">Урок 20</a></h2>
 <h5><i class="icon-feather"></i> 07.03.2023, Вт </h5>
 Повторение: Задание 6 (Анализ программного кода) if-else
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-18.html">Урок 18</a></h2>
 <h5><i class="icon-feather"></i> 21.02.2023, Вт </h5>
 Повторение: Задание 6 (Анализ программного кода) for
-<h2><a href="./polyakov.html">Презентация</a></h2>
-<h5><i class="icon-feather"></i> 14.02.2023, Вт </h5>
-Презентация по материалам К.Ю.Полякова
 <div class="pagination">
     page 1 of 6.
         <a href="./index2.html">Next&rarr;</a>
