--- a/lesson-21.html
+++ b/lesson-21.html
@@ -27,18 +27,12 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Весь Python за 1 час</h1>
-<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/fp5-XQFr_nk" frameborder="0" allowfullscreen></iframe>
-
-<h1>Весь Python для ОГЭ за 40 минут</h1>
-<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/FwS3St547Nk" frameborder="0" allowfullscreen></iframe>
-
+<p><img alt="pic" src="./images/python-IDLE-windows-2.png"></p>
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
+<p>Программа содержит <u>все</u> необходимые для ОГЭ функции и конструкции языка <em>Python</em>:
+<img alt="pic" src="./images/mem-python-example.jpg"></p>
 <!--
-![pic](./images/mem-python-example.jpg)
-Программа содержит <u>все</u> необходимые для ОГЭ функции и конструкции языка *Python*
-
 ### Скорректированная оценка уровня подготовки
 ![pic](./images/oge-inf-curr-level-4.png)
 -->
