--- a/youtube-video.html
+++ b/youtube-video.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Видеоуроки | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Youtube: Короткие видеоуроки по Пайтону"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,26 +20,21 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-08.html">Урок 8</a></h2>
-<h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
-Разбор задания 6 (Бесконечный цикл)
-<h2><a href="./lesson-07.html">Урок 7</a></h2>
-<h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
-Разбор задания 6 (Конечный цикл)
-<h2><a href="./lesson-06.html">Урок 6</a></h2>
-<h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
-Разбор задания 6 (Условный оператор) + "Лайфхак"
-<h2><a href="./lesson-05.html">Урок 5</a></h2>
-<h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
-Разбор задания 7 (Интернет-адрес) + Контрольная работа
-<h2><a href="./lesson-04.html">Урок 4</a></h2>
-<h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
-Разбор задания 8 (Поисковый запрос)
-<div class="pagination">
-        <a href="./index3.html">&larr;Prev</a>
-    page 4 of 6.
-        <a href="./index5.html">Next&rarr;</a>
-</div>    </div>
+<h2><a href="./youtube-video.html">Видеоуроки</a></h2>
+<h5><i class="icon-feather"></i> 10.03.2023, Пт
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/oge.html">oge</a> / </span>
+<span><a href="./tag/book.html">book</a> / </span>
+</h5>
+
+<h1>Весь Python за 1 час</h1>
+<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/fp5-XQFr_nk" frameborder="0" allowfullscreen></iframe>
+
+<h1>Весь Python для ОГЭ за 40 минут</h1>
+<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/FwS3St547Nk" frameborder="0" allowfullscreen></iframe>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
