next-lesson-21-init-2c

--- a/youtube-video.html
+++ b/youtube-video.html
@@ -27,11 +27,14 @@
 <span><a href="./tag/book.html">book</a> / </span>
 </h5>
 
-<h1>Весь Python за 1 час</h1>
+<h1>Python для ОГЭ за 40 минут:</h1>
+<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/FwS3St547Nk" frameborder="0" allowfullscreen></iframe>
+
+<h1>Python за 1 час:</h1>
 <iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/fp5-XQFr_nk" frameborder="0" allowfullscreen></iframe>
 
-<h1>Весь Python для ОГЭ за 40 минут</h1>
-<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/FwS3St547Nk" frameborder="0" allowfullscreen></iframe>
+<h1>Python за 1.5 часа:</h1>
+<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/82DKIKRgAdw" frameborder="0" allowfullscreen></iframe>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
