--- a/youtube-video.html
+++ b/youtube-video.html
@@ -27,14 +27,16 @@
 <span><a href="./tag/book.html">book</a> / </span>
 </h5>
 
-<h1>Python для ОГЭ за 40 минут:</h1>
+<h2>Python для ОГЭ за 40 минут:</h2>
 <iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/FwS3St547Nk" frameborder="0" allowfullscreen></iframe>
 
-<h1>Python за 1 час:</h1>
+<h2>Python за 1 час:</h2>
 <iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/fp5-XQFr_nk" frameborder="0" allowfullscreen></iframe>
 
-<h1>Python за 1.5 часа:</h1>
+<h2>Python за 1.5 часа:</h2>
 <iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/82DKIKRgAdw" frameborder="0" allowfullscreen></iframe>
+
+<p><a href="https://stepik.org/course/63223/promo" title="Необязательная подсказка">Stepik</a></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
