next-lesson-21-init-3a

--- a/stepik-course.html
+++ b/stepik-course.html
@@ -28,7 +28,7 @@
 </h5>
 
 <p><img alt="pic" src="./images/stepik-course-63223-python.png"></p>
-<p><a href="https://stepik.org/course/63223/promo" title="Курс Сергея Спиркина">Stepik</a></p>
+<p><a href="https://stepik.org/course/63223/promo" target="_blank">[Stepik 63223] Курс по пайтону Сергея Спиркина</a></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
