--- a/youtube-video.html
+++ b/youtube-video.html
@@ -36,7 +36,7 @@
 <h2>Python за 1.5 часа:</h2>
 <iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/82DKIKRgAdw" frameborder="0" allowfullscreen></iframe>
 
-<p><a href="https://stepik.org/course/63223/promo" title="Необязательная подсказка">Stepik</a></p>
+<h3>Последнее видео не рекомендуется из-за излишней сложности.</h3>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
