--- a/youtube-video.html
+++ b/youtube-video.html
@@ -30,13 +30,20 @@
 <h2>Python для ОГЭ за 40 минут:</h2>
 <iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/FwS3St547Nk" frameborder="0" allowfullscreen></iframe>
 
-<h2>Python за 1 час:</h2>
+<h2>Python для всех за 1 час:</h2>
 <iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/fp5-XQFr_nk" frameborder="0" allowfullscreen></iframe>
 
-<h2>Python за 1.5 часа:</h2>
-<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/82DKIKRgAdw" frameborder="0" allowfullscreen></iframe>
+<h2>Ускоренный курс по Python в 9 классе:</h2>
+<h3>(50 минут)</h3>
+<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/3y-J0MXxB5E" frameborder="0" allowfullscreen></iframe>
 
-<h3>Последнее видео не рекомендуется из-за излишней сложности.</h3>
+<h2>Разбор ВСЕХ заданий из ОГЭ по информатике:</h2>
+<h3>(1 час  40 минут)</h3>
+<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/7RpfC8D2Lk8" frameborder="0" allowfullscreen></iframe>
+
+<h2>Разбор 15.2 задания из ОГЭ по информатике 2021</h2>
+<h3>(20 минут)</h3>
+<iframe width="720" height="405" title="YouTube" src="https://www.youtube.com/embed/ptBTEG1Qtqg" frameborder="0" allowfullscreen></iframe>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
