--- a/fipi.html
+++ b/fipi.html
@@ -28,6 +28,9 @@
 </h5>
 
 <h1>Основной государственный экзамен по ИНФОРМАТИКЕ</h1>
+<p><a target="_blank"
+    href="http://oge.fipi.ru/os/xmodules/qprint/index.php?proj=74676951F093A0754D74F2D6E7955F06">
+    (ФИПИ) Новая версия открытого банка заданий (ИНФОРМАТИКА)</a></p>
 <h2>Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года</h2>
 <p><img alt="pic" src="./images/oge-2023-plan.png">
 <img alt="pic" src="./images/oge-2023-spec.png">
