next-lesson-21-init-4

--- a/drafts/stepik-course.html
+++ b/drafts/stepik-course.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика - book</title>
+  <title>Видеокурсы | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Stepik: Курc по Пайтону"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="../theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,16 +20,27 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2>book</h2>
-<dl>
-<dd><a href="../meeting.html">Договор</a></dd>
-<dd><a href="../fipi.html">Ф И П И</a></dd>
-<dd><a href="../evichbook.html">Книга</a></dd>
-<dd><a href="../evichansw.html">Ответы</a></dd>
-<dd><a href="../mempython.html">Питончик</a></dd>
-<dd><a href="../youtube-video.html">Видеоуроки</a></dd>
-<dd><a href="../polyakov.html">Презентация</a></dd>
-</dl>
+<h2><a href="../drafts/stepik-course.html">Видеокурсы</a></h2>
+<h5><i class="icon-feather"></i> 11.03.2023, Сб
+<i class="icon-bookmarks"></i>
+<span><a href="../tag/oge.html">oge</a> / </span>
+<span><a href="../tag/book.html">book</a> / </span>
+</h5>
+
+<p><img alt="pic" src="./images/stepik-course-63223-python.png"></p>
+<p><a href="https://stepik.org/course/63223/promo" target="_blank">[Stepik 63223] Курс по пайтону Сергея Спиркина</a></p>
+<!--
+### Оценка текущего уровня подготовки
+![pic](./images/oge-inf-curr-level-4.png)
+
+Программа содержит <u>все</u> необходимые для ОГЭ функции и конструкции языка *Python*:
+![pic](./images/mem-python-example.jpg)
+
+### Скорректированная оценка уровня подготовки
+![pic](./images/oge-inf-curr-level-4.png)
+-->
+
+<p align="center"><a href="#">on the top</a></p>
     </div>
 </div>
 <div id="footer-wrapper">
