--- a/lesson-22.html
+++ b/lesson-22.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Видеокурсы | ОГЭ 2023 информатика</title>
+  <title>Урок 22 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Stepik: Курc по Пайтону"><meta name="author" content="andygram">-->
+<meta name="description" content="Stepik 63223: Курc по Пайтону"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,14 +20,15 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./stepik-course.html">Видеокурсы</a></h2>
-<h5><i class="icon-feather"></i> 11.03.2023, Сб
+<h2><a href="./lesson-22.html">Урок 22</a></h2>
+<h5><i class="icon-feather"></i> 21.03.2023, Вт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
-<span><a href="./tag/book.html">book</a> / </span>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
 <p><img alt="pic" src="./images/stepik-course-63223-python.png"></p>
+<p><img alt="pic" src="./images/stepik-course-63223-content2.png"></p>
 <p><a href="https://stepik.org/course/63223/promo" target="_blank">[Stepik 63223] Курс по пайтону Сергея Спиркина</a></p>
 
 <p align="center"><a href="#">on the top</a></p>
