--- a/lesson-21.html
+++ b/lesson-21.html
@@ -4,7 +4,7 @@
   <title>Урок 21 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Повторение: Язык программирования Пайтон"><meta name="author" content="andygram">-->
+<meta name="description" content="Stepik 63223: Курc по Пайтону"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -27,15 +27,9 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<p><img alt="pic" src="./images/python-IDLE-windows-2.png"></p>
-<h3>Оценка текущего уровня подготовки</h3>
-<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
-<p>Программа содержит <u>все</u> необходимые для ОГЭ функции и конструкции языка <em>Python</em>:
-<img alt="pic" src="./images/mem-python-example.jpg"></p>
-<!--
-### Скорректированная оценка уровня подготовки
-![pic](./images/oge-inf-curr-level-4.png)
--->
+<p><img alt="pic" src="./images/stepik-course-63223-python.png"></p>
+<p><img alt="pic" src="./images/stepik-course-63223-content1.png"></p>
+<p><a href="https://stepik.org/course/63223/promo" target="_blank">[Stepik 63223] Курс по пайтону Сергея Спиркина</a></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
