--- a/youtube-video.html
+++ b/youtube-video.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./youtube-video.html">Видеоуроки</a></h2>
-<h5><i class="icon-feather"></i> 10.03.2023, Пт
+<h5><i class="icon-feather"></i> 18.09.2022, Вс
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/book.html">book</a> / </span>
