--- a/index2.html
+++ b/index2.html
@@ -20,9 +20,6 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./polyakov.html">Презентация</a></h2>
-<h5><i class="icon-feather"></i> 14.02.2023, Вт </h5>
-Презентация по материалам К.Ю.Полякова
 <h2><a href="./lesson-17.html">Урок 17</a></h2>
 <h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
 Повторение: Задания 5 (Вычислитель) и 4 (Расстояние)
@@ -35,6 +32,9 @@
 <h2><a href="./lesson-14.html">Урок 14</a></h2>
 <h5><i class="icon-feather"></i> 14.01.2023, Сб </h5>
 Решение заданий первой части
+<h2><a href="./lesson-13.html">Урок 13</a></h2>
+<h5><i class="icon-feather"></i> 11.01.2023, Ср </h5>
+Разбор задания 5 (Вычислитель)
 <div class="pagination">
         <a href="./index.html">&larr;Prev</a>
     page 2 of 6.
