next-lesson-22-init-1

--- a/drafts/lesson-00.html
+++ b/drafts/lesson-00.html
@@ -21,13 +21,13 @@
     </div>
 </div>    <div id="main">
 <h2><a href="../drafts/lesson-00.html">Урок 0</a></h2>
-<h5><i class="icon-feather"></i> 13.09.2022, Вт
+<h5><i class="icon-feather"></i> 10.09.2022, Сб
 <i class="icon-bookmarks"></i>
 <span><a href="../tag/oge.html">oge</a> / </span>
 <span><a href="../tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Задание 13.2</h1>
+<h1>Задание 00.0</h1>
 <p><img alt="pic" src="./images/lesson-02_01.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
