--- a/lesson-21.html
+++ b/lesson-21.html
@@ -4,7 +4,7 @@
   <title>Урок 21 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Stepik 63223: Курc по Пайтону"><meta name="author" content="andygram">-->
+<meta name="description" content="Stepik 63223: Курc по Пайтону (Линейный алгоритм, Ветвление)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
