--- a/meeting.html
+++ b/meeting.html
@@ -23,7 +23,7 @@
 <h2><a href="./meeting.html">Договор</a></h2>
 <h5><i class="icon-feather"></i> 11.09.2022, Вс
 <i class="icon-bookmarks"></i>
-<span><a href="./tag/book.html">book</a> / </span>
+<span><a href="./tag/oge.html">oge</a> / </span>
 </h5>
 
 <h3>Цель занятий</h3>
