--- a/oge_fipi.html
+++ b/oge_fipi.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Ответы | ОГЭ 2023 информатика</title>
+  <title>Ф И П И | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года."><meta name="author" content="andygram">-->
+<meta name="description" content="Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года."><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,15 +20,20 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./evichansw.html">Ответы</a></h2>
-<h5><i class="icon-feather"></i> 16.09.2022, Пт
+<h2><a href="./oge_fipi.html">Ф И П И</a></h2>
+<h5><i class="icon-feather"></i> 13.09.2022, Вт
 <i class="icon-bookmarks"></i>
-<span><a href="./tag/book.html">book</a> / </span>
 <span><a href="./tag/oge.html">oge</a> / </span>
 </h5>
 
-<p><img alt="pic" src="./images/evich2021-book-answer-1.png">
-<img alt="pic" src="./images/evich2021-book-answer-2.png"></p>
+<h1>Основной государственный экзамен по ИНФОРМАТИКЕ</h1>
+<p><a target="_blank"
+    href="http://oge.fipi.ru/os/xmodules/qprint/index.php?proj=74676951F093A0754D74F2D6E7955F06">
+    (ФИПИ) Новая версия открытого банка заданий (ИНФОРМАТИКА)</a></p>
+<h2>Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года</h2>
+<p><img alt="pic" src="./images/oge-2023-plan.png">
+<img alt="pic" src="./images/oge-2023-spec.png">
+<img alt="pic" src="./images/oge-2023-mark.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
