--- a/py_datatypes.html
+++ b/py_datatypes.html
@@ -20,7 +20,7 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./datatypes.html">Типы данных</a></h2>
+<h2><a href="./py_datatypes.html">Типы данных</a></h2>
 <h5><i class="icon-feather"></i> 14.09.2022, Ср
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/book.html">book</a> / </span>
