--- a/evich_answers.html
+++ b/evich_answers.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Ответы | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года."><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,26 +20,18 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> 27.09.2022, Вт </h5>
-Разбор задания 10 (Системы счисления)
-<h2><a href="./lesson-01.html">Урок 1</a></h2>
-<h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
-Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста)
-<h2><a href="./py_polyakov.html">Презентация</a></h2>
-<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
-Презентация по материалам К.Ю.Полякова
-<h2><a href="./py_youtube.html">Видеоуроки</a></h2>
-<h5><i class="icon-feather"></i> 18.09.2022, Вс </h5>
-Youtube: Короткие видеоуроки по Пайтону
-<h2><a href="./py_memo.html">Питончик</a></h2>
-<h5><i class="icon-feather"></i> 17.09.2022, Сб </h5>
-Шпаргалка по языку Python
-<div class="pagination">
-        <a href="./index4.html">&larr;Prev</a>
-    page 5 of 7.
-        <a href="./index6.html">Next&rarr;</a>
-</div>    </div>
+<h2><a href="./evich_answers.html">Ответы</a></h2>
+<h5><i class="icon-feather"></i> 16.09.2022, Пт
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/book.html">book</a> / </span>
+<span><a href="./tag/oge.html">oge</a> / </span>
+</h5>
+
+<p><img alt="pic" src="./images/evich2021-book-answer-1.png">
+<img alt="pic" src="./images/evich2021-book-answer-2.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
