--- a/py_memo.html
+++ b/py_memo.html
@@ -20,7 +20,7 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./mempython.html">Питончик</a></h2>
+<h2><a href="./py_memo.html">Питончик</a></h2>
 <h5><i class="icon-feather"></i> 17.09.2022, Сб
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/book.html">book</a> / </span>
