--- a/py_polyakov.html
+++ b/py_polyakov.html
@@ -20,7 +20,7 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./polyakov.html">Презентация</a></h2>
+<h2><a href="./py_polyakov.html">Презентация</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/book.html">book</a> / </span>
