--- a/py_youtube.html
+++ b/py_youtube.html
@@ -20,7 +20,7 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./youtube-video.html">Видеоуроки</a></h2>
+<h2><a href="./py_youtube.html">Видеоуроки</a></h2>
 <h5><i class="icon-feather"></i> 18.09.2022, Вс
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/book.html">book</a> / </span>
