next-lesson-23-init-0

--- a/index4.html
+++ b/index4.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-08.html">Урок 8</a></h2>
+<h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
+Разбор задания 6 (Бесконечный цикл)
 <h2><a href="./lesson-07.html">Урок 7</a></h2>
 <h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
 Разбор задания 6 (Конечный цикл)
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-04.html">Урок 4</a></h2>
 <h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
 Разбор задания 8 (Поисковый запрос)
-<h2><a href="./lesson-03.html">Урок 3</a></h2>
-<h5><i class="icon-feather"></i> 04.10.2022, Вт </h5>
-Разбор задания 9 (Схема дорог)
 <div class="pagination">
         <a href="./index3.html">&larr;Prev</a>
     page 4 of 7.
