--- a/index5.html
+++ b/index5.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-03.html">Урок 3</a></h2>
+<h5><i class="icon-feather"></i> 04.10.2022, Вт </h5>
+Разбор задания 9 (Схема дорог)
 <h2><a href="./lesson-02.html">Урок 2</a></h2>
 <h5><i class="icon-feather"></i> 27.09.2022, Вт </h5>
 Разбор задания 10 (Системы счисления)
@@ -32,9 +35,6 @@
 <h2><a href="./py_youtube.html">Видеоуроки</a></h2>
 <h5><i class="icon-feather"></i> 18.09.2022, Вс </h5>
 Youtube: Короткие видеоуроки по Пайтону
-<h2><a href="./py_memo.html">Питончик</a></h2>
-<h5><i class="icon-feather"></i> 17.09.2022, Сб </h5>
-Шпаргалка по языку Python
 <div class="pagination">
         <a href="./index4.html">&larr;Prev</a>
     page 5 of 7.
