--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-23.html">Урок 23</a></h2>
+<h5><i class="icon-feather"></i> 27.03.2023, Пн </h5>
+Stepik 63223: Курc по Пайтону (Итоговая работа)
 <h2><a href="./lesson-22.html">Урок 22</a></h2>
 <h5><i class="icon-feather"></i> 21.03.2023, Вт </h5>
-Stepik 63223: Курc по Пайтону (Циклы, Решение задач, Итоговая работа)
+Stepik 63223: Курc по Пайтону (Циклы, Решение задач)
 <h2><a href="./lesson-21.html">Урок 21</a></h2>
 <h5><i class="icon-feather"></i> 14.03.2023, Вт </h5>
 Stepik 63223: Курc по Пайтону (Линейный алгоритм, Ветвление)
@@ -32,9 +35,6 @@ Stepik 63223: Курc по Пайтону (Линейный алгоритм, В
 <h2><a href="./lesson-19.html">Урок 19</a></h2>
 <h5><i class="icon-feather"></i> 28.02.2023, Вт </h5>
 Повторение: Задание 6 (Анализ программного кода) while
-<h2><a href="./lesson-18.html">Урок 18</a></h2>
-<h5><i class="icon-feather"></i> 21.02.2023, Вт </h5>
-Повторение: Задание 6 (Анализ программного кода) for
 <div class="pagination">
     page 1 of 7.
         <a href="./index2.html">Next&rarr;</a>
