--- a/index6.html
+++ b/index6.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./py_memo.html">Питончик</a></h2>
+<h5><i class="icon-feather"></i> 17.09.2022, Сб </h5>
+Шпаргалка по языку Python
 <h2><a href="./evich_answers.html">Ответы</a></h2>
 <h5><i class="icon-feather"></i> 16.09.2022, Пт </h5>
 Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
@@ -32,9 +35,6 @@
 <h2><a href="./oge_fipi.html">Ф И П И</a></h2>
 <h5><i class="icon-feather"></i> 13.09.2022, Вт </h5>
 Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
-<h2><a href="./calendar-year.html">Учебный год</a></h2>
-<h5><i class="icon-feather"></i> 12.09.2022, Пн </h5>
-Календарь на 2022-2023 учебный год
 <div class="pagination">
         <a href="./index5.html">&larr;Prev</a>
     page 6 of 7.
