--- a/index7.html
+++ b/index7.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./calendar-year.html">Учебный год</a></h2>
+<h5><i class="icon-feather"></i> 12.09.2022, Пн </h5>
+Календарь на 2022-2023 учебный год
 <h2><a href="./meeting.html">Договор</a></h2>
 <h5><i class="icon-feather"></i> 11.09.2022, Вс </h5>
 Знакомство с родителями и договор
