--- a/lesson-23.html
+++ b/lesson-23.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Урок 22 | ОГЭ 2023 информатика</title>
+  <title>Урок 23 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Stepik 63223: Курc по Пайтону (Циклы, Решение задач)"><meta name="author" content="andygram">-->
+<meta name="description" content="Stepik 63223: Курc по Пайтону (Итоговая работа)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,15 +20,15 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-22.html">Урок 22</a></h2>
-<h5><i class="icon-feather"></i> 21.03.2023, Вт
+<h2><a href="./lesson-23.html">Урок 23</a></h2>
+<h5><i class="icon-feather"></i> 27.03.2023, Пн
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
 <p><a href="https://stepik.org/course/63223/promo" target="_blank">[Stepik 63223] Курс по пайтону Сергея Спиркина</a></p>
 <p><img alt="pic" src="./images/stepik-course-63223-python.png"></p>
-<p><img alt="pic" src="./images/stepik-course-63223-content2.png"></p>
+<p><img alt="pic" src="./images/stepik-course-63223-content3.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
