next-lesson-some-inf

--- a/lesson-23.html
+++ b/lesson-23.html
@@ -29,6 +29,32 @@
 <p><a href="https://stepik.org/course/63223/promo" target="_blank">[Stepik 63223] Курс по пайтону Сергея Спиркина</a></p>
 <p><img alt="pic" src="./images/stepik-course-63223-python.png"></p>
 <p><img alt="pic" src="./images/stepik-course-63223-content3.png"></p>
+<h2>4.1.1</h2>
+<p>Напишите программу, которая в последовательности целых чисел определяет количество чисел, кратных 5 или 9. Программа получает на вход целые числа, количество введённых чисел неизвестно, последовательность чисел заканчивается числом 0 (0 — признак окончания ввода, не входит в последовательность). Количество чисел не превышает 1000. Введённые числа по модулю не превышают 30 000. Программа должна вывести одно число: количество чисел, кратных 5 или 9.</p>
+<p>Sample Input:<pre><code>
+15
+11
+12
+18
+20
+26
+27
+0</code></pre>
+Sample Output:<pre><code>
+4</code></pre></p>
+<h3>Решение:<pre><code></h3>
+<p>4</code></pre></p>
+<h2>4.1.2</h2>
+<p>Напишите программу, которая в последовательности натуральных чисел определяет максимальное число, оканчивающееся на 3. Программа получает на вход количество чисел в последовательности, а затем сами числа. В последовательности всегда имеется число, оканчивающееся на 3. Количество чисел не превышает 1000. Введённые числа не превышают 30 000. Программа должна вывести одно число — максимальное число, оканчивающееся на 3.</p>
+<p>Sample Input:<pre><code>
+3
+53
+13
+46</code></pre>
+Sample Output:<pre><code>
+53</code></pre></p>
+<h3>Решение:<pre><code></h3>
+<p>4</code></pre></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
