next-lesson-23-init-4

--- a/lesson-21.html
+++ b/lesson-21.html
@@ -26,9 +26,19 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<p><a href="https://stepik.org/course/63223/promo" target="_blank">[Stepik 63223] Курс по пайтону Сергея Спиркина</a></p>
-<p><img alt="pic" src="./images/stepik-course-63223-python.png"></p>
-<p><img alt="pic" src="./images/stepik-course-63223-content1.png"></p>
+<p><a href="https://stepik.org/course/63223" target="_blank">Курс по Пайтону Сергея Спиркина</a></p>
+<table>
+<thead>
+<tr>
+<th><img alt="pic" src="./images/stepik-course-63223-python.png"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><img alt="pic" src="./images/stepik-course-63223-content1.png"></td>
+</tr>
+</tbody>
+</table>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
