--- a/lesson-23.html
+++ b/lesson-23.html
@@ -26,10 +26,20 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<p><a href="https://stepik.org/course/63223/promo" target="_blank">[Stepik 63223] Курс по пайтону Сергея Спиркина</a></p>
-<p><img alt="pic" src="./images/stepik-course-63223-python.png"></p>
-<p><img alt="pic" src="./images/stepik-course-63223-content3.png"></p>
-<h2>4.1.1</h2>
+<p><a href="https://stepik.org/course/63223" target="_blank">Курс по Пайтону Сергея Спиркина</a></p>
+<table>
+<thead>
+<tr>
+<th><img alt="pic" src="./images/stepik-course-63223-python.png"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><img alt="pic" src="./images/stepik-course-63223-content3.png"></td>
+</tr>
+</tbody>
+</table>
+<h2>Задача 4.1.1</h2>
 <p>Напишите программу, которая в последовательности целых чисел определяет 
 количество чисел, кратных 5 или 9. Программа получает на вход целые числа, 
 количество введённых чисел неизвестно, последовательность чисел 
@@ -37,6 +47,15 @@
 Количество чисел не превышает 1000. 
 Введённые числа по модулю не превышают 30 000. 
 Программа должна вывести одно число: количество чисел, кратных 5 или 9.</p>
+<h3>Решение:</h3>
+<pre><code>z = 0
+n = -1
+while n != 0:
+    n = int(input('Введите следующее число:'))
+    if (n > 0) and (n % 5 == 0 or n % 9 == 0):
+        z += 1
+print(z)</code></pre>
+
 <p>Sample Input:<pre><code>15
 11
 12
@@ -48,16 +67,7 @@
 Sample Output:</p>
 <pre><code>4</code></pre>
 
-<h3>Решение:</h3>
-<pre><code>z = 0
-n = -1
-while n != 0:
-    n = int(input('Введите следующее число:'))
-    if (n > 0) and (n % 5 == 0 or n % 9 == 0):
-        z += 1
-print(z)</code></pre>
-
-<h2>4.1.2</h2>
+<h2>Задача 4.1.2</h2>
 <p>Напишите программу, которая в последовательности натуральных чисел 
 определяет максимальное число, оканчивающееся на 3. 
 Программа получает на вход количество чисел в последовательности, а затем сами числа. 
@@ -65,13 +75,6 @@ print(z)</code></pre>
 Количество чисел не превышает 1000. 
 Введённые числа не превышают 30 000. 
 Программа должна вывести одно число — максимальное число, оканчивающееся на 3.</p>
-<p>Sample Input:<pre><code>3
-53
-13
-46</code></pre>
-Sample Output:</p>
-<pre><code>53</code></pre>
-
 <h3>Решение:</h3>
 <pre><code>z = 0
 n = int(input('Введите количество чисел:'))
@@ -80,6 +83,13 @@ for i in range(1, n + 1):
     if (x % 10 == 3) and (x > z):
         z = x
 print(z)</code></pre>
+
+<p>Sample Input:<pre><code>3
+53
+13
+46</code></pre>
+Sample Output:</p>
+<pre><code>53</code></pre>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
