next-lesson-23-init-5

--- a/lesson-23.html
+++ b/lesson-23.html
@@ -49,12 +49,13 @@
 Программа должна вывести одно число: количество чисел, кратных 5 или 9.</p>
 <h3>Решение:</h3>
 <pre><code>z = 0
-n = -1
-while n != 0:
-    n = int(input('Введите следующее число:'))
-    if (n > 0) and (n % 5 == 0 or n % 9 == 0):
+while True:
+    n = int(input('Введите целое число: '))
+    if n == 0:
+        break
+    if (n % 5 == 0) or (n % 9 == 0):
         z += 1
-print(z)</code></pre>
+print("Количество чисел, кратных 5 или 9:", z)</code></pre>
 
 <p>Sample Input:<pre><code>15
 11
