data-types-init-6

--- a/py_variables.html
+++ b/py_variables.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./py_variables.html">Переменные</a></h2>
-<h5><i class="icon-feather"></i> 14.09.2022, Ср
+<h5><i class="icon-feather"></i> 19.09.2022, Пн
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/book.html">book</a> / </span>
 </h5>
