data-types-init-7

--- a/py_variables.html
+++ b/py_variables.html
@@ -51,12 +51,12 @@
 </thead>
 <tbody>
 <tr>
-<td>Любому из них, кто захочет в будущем писать более-менее сложный код, придётся переучиваться.<br>На самом деле изменяется только <strong>связь</strong> между именем и значением.</td>
+<td>Любому из них, кто захочет в будущем писать более-менее сложный код, придётся переучиваться.<br>потому что изменяется не значение переменной, а <strong>связь</strong> между именем и значением!</td>
 </tr>
 </tbody>
 </table>
 <h3>Правильнее представлять себе переменную</h3>
-<p>не как <strong>коробку</strong> со значенияем внутри:
+<p>не как <strong>коробку</strong> со значением внутри:
 <img alt="pic" src="./images/apple-in-box.png"></p>
 <p>а как <strong>этикетку</strong>, наклеенную на значение:
 <img alt="pic" src="./images/apple-with-label.png"></p>
