data-types-init-7a

--- a/py_variables.html
+++ b/py_variables.html
@@ -71,10 +71,10 @@
 <td valign=top><img src="./images/pdt0a.jpg"></td>
 <td valign=top><code><pre>
 n = 9500215
-d = 3.125
-s = "ABC?4&*#5.//$%ЭЮЯ"
-e = "3.125"
-i = -25
+d = 25 / 8
+s = "ABC?4&*#5./" + "/$%ЭЮЯ"   
+e = str(d)
+i = 5 * (7 - 12)
 b = True
 m = "True"
 </pre></code></td>
