data-types-init-7b

--- a/py_variables.html
+++ b/py_variables.html
@@ -108,7 +108,7 @@ r = d + d
 <tr>
 <td valign=top><img src="./images/pdt5a.jpg"></td>
 <td valign=top><code><pre>
-d = float(e)
+d = float(d)
 b = (e > d)
 </pre></code></td>
 <td valign=top><img src="./images/pdt5b.jpg"></td></tr>
